# quantwinmt5feeder

./: README.md  __init__.py  auth.py  check_db.ps1  client.py  config.py  gap_filler.py  gap_filler_state.txt  manual.py  ohlc_bars.json  ohlc_sample.json  pyproject.toml  results.txt  run_gap_filler.ps1  scheduler.py  start_scheduler.ps1  symbol.py  test_auth.ps1  test_backfill.ps1
assistance/: __init__.py  fetch_win_ticks.py.py  ochl.py  ochl_explanation.md
tests/: debug_500.py  test_auth.ps1  test_backfill.ps1  test_mt5_time.py
